1st CI test - Add GitHub Actions CI workflow

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -13,3 +13,10 @@ autostart=true
 autorestart=true
 stderr_logfile=/var/log/queue.err.log
 stdout_logfile=/var/log/queue.out.log
+
+[program:websockets]
+command=php /var/www/html/artisan websockets:serve
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/websockets.err.log
+stdout_logfile=/var/log/websockets.out.log
