--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -1,5 +1,20 @@
+[unix_http_server]
+file=/var/run/supervisor.sock   ; path to the socket file
+chmod=0700                     ; socket file permission
+username=user                  ; socket username
+password=pass123               ; socket password
+
 [supervisord]
 nodaemon=true
+user=root
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+username=user
+password=pass123
 
 [program:php-fpm]
 command=/usr/local/sbin/php-fpm
