--- a/environment/.env.production
+++ b/environment/.env.production
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:d0O9W7bggQ/xE2s8ul8Fr1XQPuuxtjO1scjyDnt5ZYo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,22 +9,28 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=laravel-mysql
+# This should be the name of the MySQL service defined in docker-compose.yml
+# DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=shaon
+# root is not allowed
+DB_PASSWORD=root
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
+#log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
+#sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
+#127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -43,10 +49,15 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=1234
+PUSHER_APP_KEY=asfsdfsdgs
+PUSHER_APP_SECRET=sdgdghdggdf
 PUSHER_APP_CLUSTER=mt1
+PUSHER_SCHEME=https
+PUSHER_HOST=127.0.0.1
+PUSHER_PORT=6001
+PUSHER_FORCE_TLS=true
+WEBSOCKETS_ALLOWED_ORIGINS=
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
